src/main/webapp/content/scss/global.scss
@import 'bootstrap-variables';
@import 'node_modules/bootstrap/scss/functions';
@import 'node_modules/bootstrap/scss/variables';
@import 'node_modules/bootstrap/scss/mixins';

/* ==============================================================
Bootstrap tweaks
===============================================================*/

body,
h1,
h2,
h3,
h4 {
  font-weight: 400;
}

/* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
a {
  color: #533f03;
  font-weight: bold;
}

a:hover {
  color: #533f03;
}

/* override hover color for dropdown-item forced by bootstrap to all a:not([href]):not([tabindex]) elements in _reboot.scss */
a:not([href]):not([tabindex]):hover.dropdown-item {
  color: $dropdown-link-hover-color;
}

/* override .dropdown-item.active background-color on hover */
.dropdown-item.active:hover {
  background-color: mix($dropdown-link-hover-bg, $dropdown-link-active-bg, 50%);
}

a:hover {
  /* make sure browsers use the pointer cursor for anchors, even with no href */
  cursor: pointer;
}

.dropdown-item:hover {
  color: $dropdown-link-hover-color;
}

/* ==========================================================================
Browser Upgrade Prompt
========================================================================== */
.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
Generic styles
========================================================================== */

/* Error highlight on input fields */
.ng-valid[required],
.ng-valid.required {
  border-left: 5px solid green;
}

.ng-invalid:not(form) {
  border-left: 5px solid red;
}

/* other generic styles */

.jh-card {
  padding: 1.5%;
  margin: 0;
  border: none;
}

.error {
  color: white;
  background-color: red;
}

.pad {
  padding: 10px;
}

.w-40 {
  width: 40% !important;
}

.w-60 {
  width: 60% !important;
}

.break {
  white-space: normal;
  word-break: break-all;
}

.form-control {
  background-color: #fff;
}

.readonly {
  background-color: #eee;
  opacity: 1;
}

.hand,
[jhisortby] {
  cursor: pointer;
}

/* ==========================================================================
Custom alerts for notification
========================================================================== */
.alerts {
  position: absolute;
  top: 1rem;
  bottom: 1rem;
  left: 1rem;
  right: 1rem;
  pointer-events: none;
  z-index: 1000;

  .alert {
    text-overflow: ellipsis;

    pre {
      background: none;
      border: none;
      font: inherit;
      color: inherit;
      padding: 0;
      margin: 0;
    }
    .popover pre {
      font-size: 10px;
    }
  }
  .jhi-toast {
    position: fixed;
    width: 100%;
    &.left {
      left: 5px;
    }
    &.right {
      right: 5px;
    }
    &.top {
      top: 55px;
    }
    &.bottom {
      bottom: 55px;
    }
  }
}

.alerts-sticky {
  position: sticky;
  top: 1rem;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  pointer-events: all;
}

@include media-breakpoint-up(md) {
  .alert {
    display: inline-block;
    margin-inline: 50%;
    transform: translateX(-50%);
    width: max-content;
  }
}

@media screen and (min-width: 480px) {
  .alerts .jhi-toast {
    width: 50%;
  }
}

/* ==========================================================================
entity list page css
========================================================================== */

.table-entities thead th .d-flex > * {
  margin: auto 0;
}

/* ==========================================================================
entity detail page css
========================================================================== */
.row-md.jh-entity-details {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 10px;
  line-height: 1.5;
}

@media screen and (min-width: 768px) {
  .row-md.jh-entity-details > {
    dt {
      float: left;
      overflow: hidden;
      clear: left;
      text-align: right;
      text-overflow: ellipsis;
      white-space: nowrap;
      padding: 0.5em 0;
    }
    dd {
      border-bottom: 1px solid #eee;
      padding: 0.5em 0;
      margin-left: 0;
    }
  }
}

/* ==========================================================================
ui bootstrap tweaks
========================================================================== */
.nav,
.pagination,
.carousel,
.panel-title a {
  cursor: pointer;
}

.thread-dump-modal-lock {
  max-width: 450px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.dropdown-menu {
  padding-left: 0px;
}

/* ==========================================================================
angular-cli removes postcss-rtl processed inline css, processed rules must be added here instead
========================================================================== */
/* page-ribbon.component.scss */
.ribbon {
  left: -3.5em;
  -moz-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

/* navbar.component.scss */
.navbar {
  ul.navbar-nav {
    .nav-item {
      margin-left: 0.5em;
    }
  }
}

/* ===================================================================
  ------------------   Gamer Squad tweaks   --------------------------
====================================================================== */

/* ===========================
           Global
============================== */

jhi-main {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.navbar .container-fluid {
  padding-top: 0;
}

#jhi-outlet-container {
  flex: 1;
  display: flex;
  flex-direction: column;
}

#jhi-outlet-card {
  flex: 1;
}

#jhi-footer-container {
  padding-top: calc(var(--bs-gutter-x) * 0.5);
  padding-bottom: calc(var(--bs-gutter-x) * 0.5);
}

.container,
.container-fluid {
  padding-top: calc(var(--bs-gutter-x) * 0.5);
}

/* ===========================
           Nav-tabs
============================== */
.nav-tabs {
  --bs-nav-tabs-link-active-color: #fff;
  --bs-nav-tabs-link-active-border-color: var(--bs-nav-tabs-link-active-bg);
  --bs-nav-tabs-link-hover-border-color: var(--bs-nav-tabs-link-active-bg);
  border-bottom-color: var(--bs-nav-tabs-link-active-bg);
}

/* ===========================
           Buttons
============================== */
.btn {
  --bs-btn-color: #fff;
  --bs-btn-disabled-color: #fff;
  --bs-btn-hover-color: #fff;
  --bs-btn-active-color: #fff;
}

.btn-outline-primary {
  --bs-btn-hover-color: #ffffff;
  --bs-btn-color: #3e8acc;
}

/* ===========================
           Icons
============================== */

fa-icon:not(:last-child) {
  margin-right: 0.25rem;
}

/* ===========================
    Gamer Squad ToolTips :
    ex: data-gs-tooltip="..."
============================== */
[data-gs-tooltip] {
  position: relative;
  display: inline-block;
}

[data-gs-tooltip]::before,
[data-gs-tooltip]::after {
  --tooltip-color: #212529;
  --arrow-size: 8px;
  --scale: 0;
  opacity: 0;
  position: absolute;
  top: -0.15rem;
  left: 50%;
  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
  transition: opacity 0.2s, transform 0.2s;
  z-index: 1;
}

[data-gs-tooltip]::before {
  --translate-y: calc(-100% - var(--arrow-size));
  content: attr(data-gs-tooltip);
  text-align: center;
  background: var(--tooltip-color);
  color: white;
  padding: 0.5rem;
  border-radius: 0.5rem;
  width: max-content;
  max-width: 250px;
  transform-origin: bottom center;
}

[data-gs-tooltip]::after {
  --translate-y: calc(-1 * var(--arrow-size));
  content: '';
  border: var(--arrow-size) solid transparent;
  border-top-color: var(--tooltip-color);
  transform-origin: top center;
}

[data-gs-tooltip]:hover::before,
[data-gs-tooltip]:hover::after {
  --scale: 1;
  opacity: 1;
  visibility: visible;
}

/* ===========================
            Modal
============================== */
.gs-modal .modal-dialog {
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
}

/* ===========================
            Forms
============================== */
.form-control:focus {
  background-color: #e4e5e6;
}

.form-check {
  margin-bottom: 0.75rem;
}

.form-check-input {
  background-color: #e8f0fe;
}

/* ===========================
         Avatar image
============================== */

.avatar-cropper {
  width: 40px;
  height: 40px;
  overflow: hidden;
  border-radius: 50%;
  padding: 0;
}

.avatar-cropper .avatar-image {
  object-fit: cover;
  height: 100%;
  width: 100%;
}

/* jhipster-needle-scss-add-main JHipster will add new css style */

